Fixed text overflow

--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ nav h2 {
 	margin: 0 auto;
 	margin-bottom: 4px;
 }
-.bookmark h2 {
+.bookmark h2, .bookmark h3 {
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
